--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "ganache-cli": "^6.1.8",
     "mocha": "^5.2.0"
   }
