--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "ganache-cli": "^6.1.8",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "truffle-hdwallet-provider": "0.0.6"
   }
 }
