Update Dapp to work with Ropsten test net

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "truffle test",
     "lint": "eslint ./",
     "prepare": "truffle compile && npm test && npm run lint && webpack-cli --config ./webpack.config.js",
+    "webpack": "webpack-cli --config ./webpack.config.js",
     "build": "npm install",
     "dev": "webpack-dev-server"
   },
